Deployment/k8s/embedded_suatDev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suat
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: n3q-embedded
  namespace: suat
spec:
  selector:
    matchLabels:
      run: n3q-embedded
  replicas: 1
  template:
    metadata:
      labels:
        run: n3q-embedded
    spec:
      containers:
        - name: n3q-embedded
          image: docker.k8s.sui.li/n3q-embedded:e92e4864
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: kubectl-binary
              mountPath: /usr/bin/kubectl
              readOnly: true
            - name: htdocs
              mountPath: /pod-shared
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /usr/share/nginx/html /pod-shared/public; chmod -R 777 /pod-shared"]

        - name: php7fpm
          image: docker.k8s.sui.li/php7fpm
          imagePullPolicy: Always
          volumeMounts:
            - name: htdocs
              mountPath: /pod-shared

        - name: redis
          image: redis

        - name: ssh
          image: linuxserver/openssh-server
          volumeMounts:
            - name: htdocs
              mountPath: /pod-shared

      volumes:
      - name: kubectl-binary
        hostPath:
          path: /usr/bin/kubectl
      - name: htdocs
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: n3q-embedded
  namespace: suat
  labels:
    run: n3q-embedded
spec:
  selector:
    run: n3q-embedded
  ports:
  - name: http
    port: 80
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ssh
  namespace: suat
  labels:
    run: n3q-embedded
spec:
  type: NodePort
  selector:
    run: n3q-embedded
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    nodePort: 32222
